update for final deploy

--- a/About.cshtml
+++ b/About.cshtml
@@ -1,35 +1,24 @@
 ﻿@{
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "About";
 }
 
-<hgroup class="title">
-    <h1>@Page.Title.</h1>
-    <h2>Your app description page.</h2>
-</hgroup>
-
-<article>
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-
-    <p>
-        Use this area to provide additional information.
-    </p>
-</article>
-
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li><a href="~/">Home</a></li>
-        <li><a href="~/About">About</a></li>
-        <li><a href="~/Contact">Contact</a></li>
-    </ul>
-</aside>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="content">
+                <h1>@Page.Title</h1>
+                <h3>FriendlyZone</h3>
+                <h5>Cookies anyone?</h5>
+                <hr>  
+                <h3>Authors</h3>
+                <article>
+                    <p> William Gilbert Go, 300097271 </p>
+                    <p> Brandon Peters, 300105618</p>
+                    <p> Cameron Sweeney, 300096968</p>
+                </article>
+            </div>
+        </div>
+    </div>
+</div>
+ <br><br><br><br><br>
