--- a/Contact.cshtml
+++ b/Contact.cshtml
@@ -1,51 +1,55 @@
 ﻿@{
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Contact";
 }
 
-<hgroup class="title">
-    <h1>@Page.Title.</h1>
-    <h2>Your contact page.</h2>
-</hgroup>
-
-<section class="contact">
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="content">
+                <h1>@Page.Title</h1>
+                <h3>FriendlyZone</h3>
+                <h5>Cookies anyone?</h5>
+                <hr>  
+            </div>
+        </div>
+    </div>
+</div>
+ 
+<div class="message">
     <header>
         <h3>Phone:</h3>
     </header>
     <p>
         <span class="label">Main:</span>
-        <span>425.555.0100</span>
-    </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
-    </p>
-</section>
+        <span>(604) 832 3251</span>
+    </p> 
+</div>
 
-<section class="contact">
+<div class="message">
     <header>
         <h3>Email:</h3>
     </header>
     <p>
-        <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
+        <span class="label">William:</span>
+        <span><a href="mailto:williamgilbertgo@gmail.com">williamgilbertgo@gmail.com</a></span>
     </p>
     <p>
-        <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
+        <span class="label">Cameron:</span>
+        <span><a href="mailto:cameron.p.sweeney@gmail.com">cameron.p.sweeney@gmail.com</a></span>
     </p>
     <p>
-        <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
+        <span class="label">Brandon:</span>
+        <span><a href="mailto:bjpeters29@gmail.com">bjpeters29@gmail.com</a></span>
     </p>
-</section>
+</div>
 
-<section class="contact">
+<div class="message">
     <header>
         <h3>Address:</h3>
     </header>
     <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+        6710 258 Street<br />
+        Langley, BC V4W 1V3
     </p>
-</section>
+</div>
