--- a/Account/AccountLockedOut.cshtml
+++ b/Account/AccountLockedOut.cshtml
@@ -1,14 +1,21 @@
 ﻿@{
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Account Locked";
 }
 
-<hgroup class="title">
-    <h1 class="error">@Page.Title.</h1>
-    <h2 class="error">Your account was locked out due to too many invalid log in attempts.</h2>
-</hgroup>
-
-<p>
-    Don't worry, the account will automatically be unlocked in 60 seconds. 
-    Please try again after that time has passed.
-</p>
+<div class="container">
+   <div class="row">
+      <div class="col-lg-12">
+         <div class="content">
+             <h1 class="error">@Page.Title.</h1>
+             <hr>
+             <i class="fa fa-users" style="font-size: 100px"></i>
+             <h2 class="error">Your account was locked out due to too many invalid log in attempts.</h2>
+             <p>
+                Don't worry, the account will automatically be unlocked in 60 seconds. 
+                Please try again after that time has passed.
+             </p>
+         </div>
+      </div>
+   </div>
+</div>
