--- a/Account/ExternalLoginFailure.cshtml
+++ b/Account/ExternalLoginFailure.cshtml
@@ -1,10 +1,19 @@
 ﻿@{
     // Set the layout page and page title
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Login Failure";
 }
-
-<hgroup class="title">
-    <h1>@Page.Title.</h1>
-    <h2>Unsuccessful login with service.</h2>
-</hgroup>
+ 
+     
+<div class="container">
+   <div class="row">
+      <div class="col-lg-12">
+         <div class="content">
+             <h1>@Page.Title.</h1>
+             <hr>
+             <i class="fa fa-users" style="font-size: 100px"></i>
+             <h2>Unsuccessful login with service.</h2>
+         </div>
+      </div>
+   </div>
+</div>
