--- a/Account/ForgotPassword.cshtml
+++ b/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Forget Your Password";
 
     bool passwordSent = false;
@@ -39,45 +39,50 @@
         }
     }
 }
-
-<hgroup class="title">
-    <h1>@Page.Title.</h1>
-    <h2>Use the form below to reset your password.</h2>
-</hgroup>
-
-@if (!WebMail.SmtpServer.IsEmpty()) {
-    <p>
-        We will send password reset instructions to the email address associated with your account.
-    </p>
-
-    if (passwordSent) {
-        <p class="message-success">
-            Instructions to reset your password have been sent to the specified email address.
-        </p>
-    }
-
-    <form method="post">
-        @AntiForgery.GetHtml()
-        @Html.ValidationSummary(excludeFieldErrors: true)
-
-        <fieldset>
-            <legend>Password Reset Instructions Form</legend>
-            <ol>
-                <li class="email">
-                    <label for="email" @if (!ModelState.IsValidField("email")) {<text>class="error-label"</text>}>Email address</label>
-                    <input type="text" id="email" name="email" value="@email" disabled="@passwordSent" @Validation.For("email") />
-                    @Html.ValidationMessage("email")
-                </li>
-            </ol>
-            <p class="form-actions">
-                <input type="submit" value="Send instructions" disabled="@passwordSent" />
+<div class="container">
+   <div class="row">
+      <div class="col-lg-12">
+         <div class="content"> 
+             <h1>@Page.Title.</h1>
+             <h2>Use the form below to reset your password.</h2>
+             <hr>
+             @if (!WebMail.SmtpServer.IsEmpty()) {
+            <p>
+                We will send password reset instructions to the email address associated with your account.
             </p>
-        </fieldset>
-    </form>
-} else {
-   <p class="message-info">
-       Password recovery is disabled for this website because the SMTP server is 
-       not configured correctly. Please contact the owner of this site to reset 
-       your password.
-   </p>
-}
+
+                if (passwordSent) {
+                    <p class="message-success">
+                        Instructions to reset your password have been sent to the specified email address.
+                    </p>
+                }
+
+                <form method="post">
+                    @AntiForgery.GetHtml()
+                    @Html.ValidationSummary(excludeFieldErrors: true)
+
+                    <fieldset>
+                        <legend>Password Reset Instructions Form</legend>
+                        <ol>
+                            <li class="email">
+                                <label for="email" @if (!ModelState.IsValidField("email")) {<text>class="error-label"</text>}>Email address</label>
+                                <input type="text" id="email" name="email" value="@email" disabled="@passwordSent" @Validation.For("email") />
+                                @Html.ValidationMessage("email")
+                            </li>
+                        </ol>
+                        <p class="form-actions">
+                            <input type="submit" value="Send instructions" disabled="@passwordSent" />
+                        </p>
+                    </fieldset>
+                </form>
+            } else {
+               <p class="message-info">
+                   Password recovery is disabled for this website because the SMTP server is 
+                   not configured correctly. Please contact the owner of this site to reset 
+                   your password.
+               </p>
+            }
+         </div>
+      </div>
+   </div>
+</div>  
