--- a/Account/Login.cshtml
+++ b/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Log in";
 
     // Initialize general page variables
@@ -69,49 +69,53 @@
         }
     }
 }
-
-<hgroup class="title">
-    <h1>@Page.Title.</h1>
-</hgroup>
-
-<section id="loginForm">
-    <h2>Use a local account to log in.</h2>
-    <form method="post">
-        @AntiForgery.GetHtml()
-        @* If one or more validation errors exist, show an error *@
-        @Html.ValidationSummary("Log in was unsuccessful. Please correct the errors and try again.", excludeFieldErrors: true, htmlAttributes: null)
-
-        <fieldset>
-            <legend>Log in to Your Account</legend>
-            <ol>
-                <li class="email">
-                    <label for="email" @if (!ModelState.IsValidField("email"))
-                                       {<text>class="error-label"</text>}>Email address</label>
-                    <input type="text" id="email" name="email" value="@email" @Validation.For("email")/>
-                    @* Write any user name validation errors to the page *@
-                    @Html.ValidationMessage("email")
-                </li>
-                <li class="password">
-                    <label for="password" @if (!ModelState.IsValidField("password")) {<text>class="error-label"</text>}>Password</label>
-                    <input type="password" id="password" name="password" @Validation.For("password")/>
-                    @* Write any password validation errors to the page *@
-                    @Html.ValidationMessage("password")
-                </li>
-                <li class="remember-me">
-                    <input type="checkbox" id="rememberMe" name="rememberMe" value="true" checked="@rememberMe" />
-                    <label class="checkbox" for="rememberMe">Remember me?</label>
-                </li>
-            </ol>
-            <input type="submit" value="Log in" />
-        </fieldset>
-    </form>
-    <p>
-        <a href="~/Account/Register">Don't have a Account?</a>
-        <a href="~/Account/ForgotPassword">Did you forget your password?</a>
-    </p>
-</section>
-
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @RenderPage("~/Account/_ExternalLoginsList.cshtml")
-</section>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>@Page.Title</title>
+    </head>
+    <body style="background-color: #f8f8f8">
+        <div class="container">
+           <div class="row">
+             <div class="col-lg-12">
+                <div class="content">
+                <div class="content-login">
+                    <h1>FriendlyZone</h1>
+                    <hr>
+                    <h3>Log in</h3>
+                    <form method="post">
+                    @AntiForgery.GetHtml()
+                    @* If one or more validation errors exist, show an error *@
+                    @Html.ValidationSummary("Log in was unsuccessful. Please correct the errors and try again.", excludeFieldErrors: true, htmlAttributes: null)
+                    <fieldset>
+                        <div class="text-comment">
+                            <label for="email" @if (!ModelState.IsValidField("email"))
+                                                               {<text>class="error-label"</text>}></label><br>
+                            <input type="text" id="email" placeholder="Email" name="email" value="@email" @Validation.For("email")/><br>
+                            @* Write any user name validation errors to the page *@
+                            @Html.ValidationMessage("email")
+                        </div>
+                        <div class="text-comment">
+                            <label for="password" @if (!ModelState.IsValidField("password")) {<text>class="error-label"</text>}></label><br>
+                            <input type="password" id="password" placeholder="Password" name="password" @Validation.For("password")/><br>
+                            @* Write any password validation errors to the page *@
+                            @Html.ValidationMessage("password")
+                        </div>
+                        <div id="rememberMe"><br>
+                            Remember me  <input type="checkbox" id="rememberMe" name="rememberMe" value="true" checked="@rememberMe" /><br><br>
+                            <input type="submit" value="Log in" />
+                        </div> 
+                    </fieldset>
+                    </form>
+                    <p><br>
+                        <a href="~/Account/Register">Don't have a Account?</a>
+                        <a href="~/Account/ForgotPassword">Did you forget your password?</a>
+                   </p>
+               </div>
+               </div>
+             </div>
+          </div>
+        </div>
+    </body>
+</html>
