--- a/Account/Manage.cshtml
+++ b/Account/Manage.cshtml
@@ -9,7 +9,7 @@
 @{
     WebSecurity.RequireAuthenticatedUser();
 
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Manage Account";
 
     var action = Request.Form["action"];
@@ -105,97 +105,112 @@
         }
     }
 }
-<hgroup class="title">
-    <h1>@Page.Title.</h1>
-</hgroup>
+<div class="container">
+   <div class="row">
+      <div class="col-lg-12">
+         <div class="content">
+         <div class="content-register">
+             <h1>@Page.Title.</h1>
+             <i class="fa fa-users" style="font-size: 100px"></i>
+             <br><br>
+             @if (!successMessage.IsEmpty()) {
+                <p class="message-success">
+                    @successMessage
+                </p>
+             }
 
-@if (!successMessage.IsEmpty()) {
-    <p class="message-success">
-        @successMessage
-    </p>
-}
+             <p>You're logged in as <strong>@WebSecurity.CurrentUserName</strong>.</p>
 
-<p>You're logged in as <strong>@WebSecurity.CurrentUserName</strong>.</p>
+             @if (hasLocalAccount) {
+                <h3>Change password</h3>
+             } else {
+                <p>
+                    You do not have a local password for this site. Add a local password so you can log in without an external login.
+                </p>
+             } 
 
-@if (hasLocalAccount) {
-    <h3>Change password</h3>
-} else {
-    <p>
-        You do not have a local password for this site. Add a local password so you can log in without an external login.
-    </p>
-}
+            <div class="manage-form">
+                <form method="post">
+                    @AntiForgery.GetHtml()
+                    @Html.ValidationSummary(excludeFieldErrors: true)
 
-<form method="post">
-    @AntiForgery.GetHtml()
-    @Html.ValidationSummary(excludeFieldErrors: true)
-
-    <fieldset>
-        <legend>
-        @if (hasLocalAccount) {
-            <text>Change Password Form</text>
-        } else {
-            <text>Set Password Form</text>
-        }
-        </legend>
-        <ol>
-            @if (hasLocalAccount) {
-                <li class="current-password">
-                    <label for="currentPassword" @if (!ModelState.IsValidField("currentPassword")) {<text>class="error-label"</text>}>Current password</label>
-                    <input type="password" id="currentPassword" name="currentPassword" @Validation.For("currentPassword")/>
-                    @Html.ValidationMessage("currentPassword")
-                </li>
-            }
-            <li class="new-password">
-                <label for="newPassword" @if (!ModelState.IsValidField("newPassword")) {<text>class="error-label"</text>}>New password</label>
-                <input type="password" id="newPassword" name="newPassword" @Validation.For("newPassword")/>
-                @Html.ValidationMessage("newPassword")
-            </li>
-            <li class="confirm-password">
-                <label for="confirmPassword" @if (!ModelState.IsValidField("confirmPassword")) {<text>class="error-label"</text>}>Confirm new password</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" @Validation.For("confirmPassword")/>
-                @Html.ValidationMessage("confirmPassword")
-            </li>
-        </ol>
-        @if (hasLocalAccount) {
-            <button type="submit" name="action" value="password">Change Password</button>
-            <p>
-                Click <a href="~/Account/ForgotPassword" title="Forgot password page">here</a> if you've forgotten your password.
-            </p>
-        } else {
-            <button type="submit" name="action" value="password">Set Password</button>
-        }
-    </fieldset>
-</form>
-
-<section id="externalLogins">
-    @if (externalLogins.Count > 0) {
-        <h3>Registered external logins</h3>
-        <table>
-            <tbody>
-            @foreach (var externalLogin in externalLogins) {
-                <tr>
-                    <td>@externalLogin.ProviderDisplayName</td>
-                    <td>
-                        @if (canRemoveLogin) {
-                            <form method="post">
-                                @AntiForgery.GetHtml()
-                                <fieldset>
-                                    <legend></legend>
-                                    <input type="hidden" name="provider" value="@externalLogin.Provider" />
-                                    <input type="hidden" name="userId" value="@externalLogin.UserId" />
-                                    <button type="submit" name="action" value="removeLogin" title="Remove this @externalLogin.ProviderDisplayName credential from your account">Remove</button>
-                                </fieldset>
-                            </form>
+                    <fieldset>
+                        <p style="color: white;font-size: 16pt;padding-left: 50px">
+                        @if (hasLocalAccount) {
+                            <p>Change Password Form</p>
                         } else {
-                            @: &nbsp;
+                            <p>Set Password Form</p>
                         }
-                    </td>
-                </tr>
-            }
-            </tbody>
-        </table>
-    }
+                        </p> 
+                            @if (hasLocalAccount) {
+                                <div class="field">
+                                    <label for="currentPassword" @if (!ModelState.IsValidField("currentPassword")) {<text>class="error-label"</text>}>Current password</label>
+                                    <input type="password" id="currentPassword" name="currentPassword" @Validation.For("currentPassword")/>
+                                    @Html.ValidationMessage("currentPassword")
+                                </div>
+                            }
+                            <div class="field">
+                                <label for="newPassword" @if (!ModelState.IsValidField("newPassword")) {<text>class="error-label"</text>}>New password</label>
+                                <input type="password" id="newPassword" name="newPassword" @Validation.For("newPassword")/>
+                                @Html.ValidationMessage("newPassword")
+                            </div>
+                            <div class="field">
+                                <label for="confirmPassword" @if (!ModelState.IsValidField("confirmPassword")) {<text>class="error-label"</text>}>Confirm new password</label>
+                                <input type="password" id="confirmPassword" name="confirmPassword" @Validation.For("confirmPassword")/>
+                                @Html.ValidationMessage("confirmPassword")
+                            </div> 
+                        @if (hasLocalAccount) {
+                            <p style="padding-left: 25%">
+                            <input type="submit" name="action" value="Change Password"> 
+                            </p>
+                            <p style="text-align: center">
+                                Click <a href="~/Account/ForgotPassword" title="Forgot password page"><em>here</em></a> if you've forgotten your password.
+                            </p>
+                        } else {
+                            <p style="padding-left: 30px">
+                                <input type="submit" name="action" value="Set Password">
+                            </p>
+                        }
+                    </fieldset>
+                </form>
+            </div> 
 
-    <h3>Add an external login</h3>
-    @RenderPage("~/Account/_ExternalLoginsList.cshtml")
-</section>
+
+            <section id="externalLogins">
+                @if (externalLogins.Count > 0) {
+                    <h3>Registered external logins</h3>
+                    <table>
+                        <tbody>
+                        @foreach (var externalLogin in externalLogins) {
+                            <tr>
+                                <td>@externalLogin.ProviderDisplayName</td>
+                                <td>
+                                    @if (canRemoveLogin) {
+                                        <form method="post">
+                                            @AntiForgery.GetHtml()
+                                            <fieldset>
+                                                <legend></legend>
+                                                <input type="hidden" name="provider" value="@externalLogin.Provider" />
+                                                <input type="hidden" name="userId" value="@externalLogin.UserId" />
+                                                <button type="submit" name="action" value="removeLogin" title="Remove this @externalLogin.ProviderDisplayName credential from your account">Remove</button>
+                                            </fieldset>
+                                        </form>
+                                    } else {
+                                        @: &nbsp;
+                                    }
+                                </td>
+                            </tr>
+                        }
+                        </tbody>
+                    </table>
+                } 
+                <h3>Add an external login</h3>
+                @RenderPage("~/Account/_ExternalLoginsList.cshtml")
+            </section>
+         </div>
+         </div>
+      </div>
+   </div>
+</div> 
+
+
