--- a/Account/Thanks.cshtml
+++ b/Account/Thanks.cshtml
@@ -1,25 +1,34 @@
 ﻿@{
     // Set the layout page and page title
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "Thanks for registering";
 }
 
-@if (!WebSecurity.IsAuthenticated) {
-    <hgroup class="title">
-        <h1>@Page.Title.</h1>
-        <h2>But you're not done yet!</h2>
-    </hgroup>
+<div class="container">
+   <div class="row">
+      <div class="col-lg-12">
+         <div class="content"> 
+             @if (!WebSecurity.IsAuthenticated) { 
+                 <h1>@Page.Title.</h1>
+                 <hr>
+                 <i class="fa fa-users" style="font-size: 100px"></i>
+                 <h2>But you're not done yet</h2>
 
-    <p>
-       An email with instructions on how to activate your account is on its way to you.
-    </p>
-} else {
-    <hgroup class="title">
-        <h1>@Page.Title.</h1>
-        <h2>You are all set.</h2>
-    </hgroup>
+                <p>
+                   An email with instructions on how to activate your account is on its way to you.
+                </p>
+            } else { 
+                    <h1>@Page.Title.</h1>
+                     <hr>
+                     <i class="fa fa-users" style="font-size: 100px"></i>
+                    <h2>You are all set.</h2> 
 
-    <p>
-        It looks like you've already confirmed your account and are good to go.
-    </p>
-}
+                <p>
+                    It looks like you've already confirmed your account and are good to go.
+                </p>
+            }
+         </div>
+      </div>
+   </div>
+</div>
+
