--- a/Account/UpdateProfile.cshtml
+++ b/Account/UpdateProfile.cshtml
@@ -2,7 +2,23 @@
     if (!WebSecurity.IsAuthenticated) {
         Response.Redirect(@Href("~/Account/Login?returnUrl="+Request.Url.LocalPath));
     }
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
+    Page.Title = "Update Profile";
+    
+
+    // UPLOAD IMAGE
+     WebImage photo = null;
+     var newFileName = "";
+     var imagePath = "";
+
+     if (IsPost) {
+         photo = WebImage.GetImageFromRequest();
+         if (photo != null) {
+             newFileName =  Path.GetFileName(photo.FileName);
+             imagePath = "Images/" + newFileName;
+             photo.Save("~/" + imagePath);
+         }
+     }
 
     <!-- WORK WITH DATA -->
     var db = Database.Open("StarterSite");
@@ -16,20 +32,26 @@
     var row = db.QuerySingle(selectQueryString, name);
 
     var username = row.UserName;
+    var currentImage = Request.ApplicationPath + row.ProfilePicture;
+    var checkLog = row.IsLoggedIn; 
+
+    // Redirect to the error page if the user tries to access others account
+    if (checkLog == false) {
+        Response.Redirect(@Href("~/Error/Forbidden"));
+    }
 
     if (IsPost) {
        username = Request["username"];
        if (String.IsNullOrEmpty(username)) {
            ModelState.AddError("username","Username name is required");
        }
-
-
-       // insert data into database
+        
+      var image = imagePath;
        if (ModelState.IsValid) {
-           var updateQueryString = "UPDATE UserProfile SET UserName=@0 WHERE UserName=@1";
-           db.Execute(updateQueryString,username,name);
+           var updateQueryString = "UPDATE UserProfile SET UserName=@0, ProfilePicture=@1 WHERE UserName=@2";
+           db.Execute(updateQueryString,username,imagePath,name);
            Response.Redirect(@Href("~/Account/MyProfile.cshtml"));
-       }
+       } 
     }
     
 }
@@ -39,19 +61,43 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Update Profile</title>
+        <title>@Page.Title</title>
     </head>
-    <body>
-        <h1>Update Profile</h1>
-        <form method="POST" action="">
-            <fieldset>
-                <legend>Update Username</legend>
-                <div>
-                    <label for="username">Username</label>
-                    <input type="text" name="username" value="@username">
-                </div> 
-                <input type="submit" value="Update Profile">
-            </fieldset>
-        </form>
+   <body>
+     <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="content"> 
+                    <h1>Update Profile</h1>
+                    <h3>@username</h3>
+                    <div>
+                        <img src="@currentImage" alt="@username" class="dp">
+                    </div>
+                    <hr>
+                    <div class="update-form">
+                        <form method="POST" action="" enctype="multipart/form-data">
+                            <fieldset>
+                                <div class="field">
+                                    <label for="username">Username</label>
+                                    <input type="text" name="username" value="@username">
+                                </div>
+                                <div class="field">
+                                    <label for="profilePicture">Profile Picture</label>
+                                    <input type="file" name="profilePicture" >
+                                </div> 
+                                <div class="field">
+                                    <a href="@Href("~/Account/MyProfile",name)">
+                                        <input type="button" value="Cancel">
+                                    </a>
+                                    <input type="submit" value="Update Profile">
+                                </div> 
+                                
+                            </fieldset>
+                        </form>
+                    </div>
+                 </div>
+              </div>
+           </div>
+       </div>
     </body>
 </html>
