--- a/Admin.cshtml
+++ b/Admin.cshtml
@@ -5,9 +5,9 @@
     }
     // If user not the admin, display 404 ERROR
     if (!User.IsInRole("Admin")) {
-        Response.Redirect("~/ErrorPage");
+        Response.Redirect("~/Error/Unauthorized");
     }
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     
 }
 
@@ -19,6 +19,18 @@
         <title>Admin</title>
     </head>
     <body>
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="content">
+                        <h1>Admin</h1>
+                        <hr>
+                        <img class="chart" src="~/Charts/FollowersChart.cshtml" alt="Number of followers per user">
+                        <img class="chart" src="~/Charts/PostsChart.cshtml" alt="Number of posts per user">
+                        <img class="chart" src="~/Charts/UserRolesChart.cshtml" alt="role" /> 
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
