--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,29 +1,34 @@
 ﻿@{
-    Layout = "~/_SiteLayout.cshtml";
+    Layout = "~/_MainLayout.cshtml";
     Page.Title = "FriendlyZone";
 }
 
-@section featured {
-<section class="featured">
-    <div class="content-wrapper">
-        <hgroup class="title">
-            <h1>@Page.Title.</h1>
-        </hgroup>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="content">
+                <h1>@Page.Title</h1>
+                <i class="fa fa-users" style="font-size: 100px"></i>
+                <h3>Cookies anyone?</h3>
+                <hr>
+              <!-- <a href="~/Member" class="btn btn-default btn-lg"><i class="fa fa-users">
+                    <span style="color: black">Get Started!</span></i></a>  -->  
+            </div>
+        </div>
     </div>
-</section>
-}
-
-<p>Members are requested to post according to the following guidlines:</p>
-
-<ol class="round">
-    <li class="one">
-        <h5>Think Before Posting</h5><br>
-    </li>
-
-    <li class="two">
-        <h5>Use Appropriate Language</h5><br>
-    </li>
-
-    <li class="three">
-        <h5>Have Respect for Others</h5><br>
-</ol>
+</div>
+<div class="message">
+    <br>
+   <p>Members are requested to post according to the following guidlines:</p>
+    <ol>
+        <li>
+            <h4>Think Before Posting</h4>
+        </li>
+        <li>
+            <h4>Use Appropriate Language</h4>
+        </li>
+        <li>
+            <h4>Have Respect for Others</h4>
+            <br><br>
+    </ol>
+</div> 
